--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": false,
+    "skipDefaultLibCheck": true,
+    "skipLibCheck": true,
     "noImplicitAny": false,
     "inlineSourceMap": true,
     "inlineSources": true,
